plugins {
    id 'java-library'
    id 'maven-publish'
}

group = 'com.clever4j'
version = '1.0.0'

repositories {
    mavenCentral()
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java // Publikowanie kompilacji projektu jako artefaktu Javy
        }
    }
    repositories {
        mavenLocal()
    }
}

test {
    useJUnitPlatform()
}

dependencies {
    // junit
    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.4' // użyj najnowszej wersji

    // spotbugs-annotations
    implementation 'com.github.spotbugs:spotbugs-annotations:4.8.6'

    implementation 'jakarta.annotation:jakarta.annotation-api:3.0.0'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}